# md-dedupe

./: .gitignore  CONTRIBUTING.md  README.ja.md  README.md  THIRD_PARTY_LICENSES.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/md_dedupe/: __init__.py  __main__.py  cli.py  config.py  models.py
src/md_dedupe/core/: cluster.py  frontmatter_cmp.py  hasher.py  scanner.py  similarity.py  url_extractor.py
src/md_dedupe/merge/: auto_merge.py  interactive.py
src/md_dedupe/reporters/: json_report.py  markdown_report.py  text.py
tests/integration/: test_merge_flow.py  test_scan_flow.py
tests/integration/fixtures/: a.md  b.md  c.md  d.md  e.md  f.md  g.md
tests/unit/: test_auto_merge.py  test_cluster.py  test_frontmatter_cmp.py  test_hasher.py  test_scanner.py  test_similarity.py  test_url_extractor.py
